# M5Stop_Watch_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  how_to_use.md  partitions.csv  sdkconfig.defaults
components/ic_rx8130/: CMakeLists.txt  rx8130.cpp  rx8130.h
components/m5_io_expander/: CMakeLists.txt  M5_io_expander.cpp  M5_io_expander.h  README.md  idf_component.yml
components/m5_io_expander/components/m5_io_pi4ioe5v6408/: README.md  m5_io_pi4ioe5v6408.cpp  m5_io_pi4ioe5v6408.h
components/m5_io_expander/components/m5_io_py32ioexpander/: m5_io_py32ioexpander.cpp  m5_io_py32ioexpander.h
components/m5_io_expander/components/m5_io_py32ioexpander/doc/: PY32_IO_Explander手册.md
components/m5_stamp_pm1/: CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.json  library.properties
components/m5_stamp_pm1/src/: m5_stamp_pm1.cpp  m5_stamp_pm1.h  m5_stamp_pm1_class.h  m5_stamp_pm1_i2c_compat.h
components/otool_bmi270/: CMakeLists.txt  bmi270_tools.cpp  bmi270_tools.h
components/sensor_bmi270/: CMakeLists.txt
components/sensor_bmi270/include/: accel_gyro_bmi270.h
components/sensor_bmi270/src/: accel_gyro_bmi270.c
main/: CMakeLists.txt  audio_user.cpp  audio_user.h  circle_images.h  cst820_user.cpp  cst820_user.h  display_user.cpp  display_user.h  es8311_user.cpp  es8311_user.h  idf_component.yml  imu_user.cpp  imu_user.h  main.cpp  power_management.cpp  power_management.h  setting.h  tools.cpp  tools.h  touch_user.cpp  touch_user.h  ui.cpp  ui.h  wakeup_test.cpp  wifi_manager.cpp  wifi_manager.h
tool/: make_circle.py
